
\item Modified connectCounts() to eliminate warnings upon stranded entries, unknown chromosomes.
All entries of input regions are now retained, though not necessarily in the input order.

\item Fixed bug in savePairs() involving failure to swap other information when enforcing index ordering.

\item Added mergeCMs() function to allow entry into the pipeline from ContactMatrix objects.
}}

\section{Version 1.8.0}{\itemize{
\item Streamlined filterDirect(), filterTrended(), and added tests for them.
Also allowed specification of which assay to use for the data and reference objects.

\item enrichedPairs() and neighborCounts() now return counts for neighbourhood regions, not just the enrichment values.

\item filterPeaks() will compute (and optionally return) enrichment values from neighbourhood counts. 

\item normalizeCNV() and correctedContact() allow specification of which assay matrix to use from the SE objects.

\item Refactored a great deal of the C++ code for improved clarity.

\item Overhauled handling of DNase Hi-C data, so that pseudo-fragments are no longer necessary.
Most functions now automatically recognise DNase-C data from an empty GRanges in param$fragments. 
Deprecated segmentGenome() and prepPseudoPairs(), added the emptyGenome() function.

\item Updated user's guide.
}
}

\section{Version 1.6.0}{\itemize{
\item Relaxed checks in preparePairs(), prepPseudoPairs() when more chromosomes are supplied than needed.

\item Relaxed checks in connectCounts() when extra chromosomes are in the input ranges.

\item Fixed an issue with preparePairs() when too many file handles are open.

\item Fixed clash between BiocGenerics and Matrix which().

\item Modified domainDirections() to return a RangedSummarizedExperiment.

\item Removed defunct DIList class and methods.

\item Switched from seqlevels() to seqlevelsInUse() for fragment intervals.

\item Updated user's guide, documentation.
}
}

\section{Version 1.4.0}{\itemize{
\item 